<resources>

    <string name="begin_test">Begin Test</string>
    <string name="ping">PING</string>
    <string name="_0_ms">0 ms</string>
    <string name="download">DOWNLOAD</string>
    <string name="_0_mbps">0 Mbps</string>
    <string name="upload">UPLOAD</string>
    <string name="selec_best_sv">Selecting best server based on ping...</string>
    <string name="restart_test">Restart Test</string>
    <string name="err_try_again">There was a problem in getting Host Location. Try again later.</string>
    <string name="rate_app">Rate app</string>
    <string name="more_apps">More apps</string>
    <string name="term_policy"><![CDATA[Term & Policy]]></string>
    <string name="share_app">Share app</string>
</resources>
