<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_50"
            android:background="@color/colorPrimary2"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/logo" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_150"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/ping"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/txt_small"
                    android:textStyle="normal|bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_ms"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/txt_large" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutChartPing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_medium"
                    android:text="@string/download"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/txt_small"
                    android:textStyle="normal|bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDownload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_mbps"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/txt_large" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutChartDownload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_medium"
                    android:text="@string/upload"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/txt_small"
                    android:textStyle="normal|bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvUpload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_mbps"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/txt_large" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutChartUpload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/main" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/bar" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/w_50"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btStart"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:background="@color/textColor2"
                    android:elevation="@dimen/margin_padding_small"
                    android:shadowRadius="15"
                    android:text="@string/begin_test"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp" />
            </RelativeLayout>

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/flAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
